[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
colored = "2.0.4"
lazy_static = "1.4.0"
time = { version = "0.3.26", features = ["formatting"] }
tokio = { version = "1.32.0", features = ["full"] }
walkdir = "2.3.3"
